required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version:
----------------

- Fix error when saving the MAXLENGTH parameter (#3031)

- Test database connections before using them (#2932)

- Support non-numeric join criteria (#2006)

- Ensure there's enough room in the SQL to hold a long (#1284)

- Fix filter error in multi-clause filters (#2937)

- Fix memory leak in SQL building (#2997)

- Change the dll mapping rules to support the recent MONO versions 
(#3019)

- Added CURL_CA_BUNDLE env. var. to enable using HTTPS services in WMS/WFS
  client connections (#3007)

- Fixed a problem with an error message with mode=legendicon, wrong string 
  being output.

- Fixed detection of freetype when installed in non-system directory (#3008)

- Fixed detection of libpng + zlib headers with experimental-png enabled (#3010)

- Fixed a memory leak when unescaping quotes in logical expressions (#2938)

- Fixed a problem with the iniitialization of tag arguments when multiple
  item, shpxy or exent tags were in the same block of template text being
  processed (#2990)

- Fixed a double free problem in shpxy tag processing

- Fix problem when using minfeaturesize with a LABEL_NO_CLIP (#2758)

- Fix Getlegendgraphic when sizeunit is set (#2983)

- Fix mapogcfilter.c not to cause syntax error if PROJ.4 is not compiled
  in (#2987)

- fix SOS blockSeparator output (#3014)

- fix MIME type support (#3020)

Version 5.4.0 (2009-04-22):
---------------------------

- No change since 5.4.0-rc2.

Version 5.4.0-rc2 (2009-04-15):
-------------------------------

- Prevent from changing the connection type to MS_RASTER when
  setConnectionType(MS_WMS) is used (#2908)
