@@ -401,11 +401,16 @@ int layerObj_open(layerObj *self) {
 
 
 int layerObj_whichShapes(layerObj *self, rectObj *poRect) {
-  /* 
-  ** We assume folks use this like a simple query so retrieve all items with each shape.
-  */
-  if(msLayerWhichItems(self, MS_TRUE, MS_FALSE, NULL) != MS_SUCCESS) return MS_FAILURE;
-  return msLayerWhichShapes(self, *poRect);
+    int oldconnectiontype = self->connectiontype;
+    self->connectiontype = MS_INLINE;
+
+    if(msLayerWhichItems(self, MS_TRUE, MS_FALSE, NULL) != MS_SUCCESS) {
+        self->connectiontype = oldconnectiontype;
+        return MS_FAILURE;
+    }
+    self->connectiontype = oldconnectiontype;
+
+    return msLayerWhichShapes(self, *poRect);
 }
 
 
