@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version:
 ----------------
 
+- Fix MapScript whichShapes() to respect filters AND return all items (#2689)
+
 - Fix error when saving the MAXLENGTH parameter (#3031)
 
 - Test database connections before using them (#2932)
@@ -26,8 +28,7 @@ Current Version:
 
 - Fix memory leak in SQL building (#2997)
 
-- Change the dll mapping rules to support the recent MONO versions 
-(#3019)
+- Change the dll mapping rules to support the recent MONO versions (#3019)
 
 - Added CURL_CA_BUNDLE env. var. to enable using HTTPS services in WMS/WFS
   client connections (#3007)
